wise-k8s-dir/wise-dir-v1-221201/wise-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wise-deployment
  namespace: hyperdata
spec:
  selector:
    matchLabels:
      app: wise
  replicas: 4
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: wise
    spec:
      containers:
      - name: wiseolapcon
        #image: 172.24.9.40:5000/wiseolap:6.9.2
        image: 172.24.9.40:5000/wiseolap:6.9.8
        command:
        - "/bin/bash"
        args: ["/root/command1/command1.sh"]
        ports:
        - containerPort: 8088
          name: listener
          protocol: TCP
        - containerPort: 9736
          name: admin
          protocol: TCP
        - containerPort: 22
          name: sshn
          protocol: TCP
        resources:
          requests:
            cpu: 4
            memory: 34Gi
          limits:
            cpu: 4
            memory: 34Gi
        readinessProbe:
          tcpSocket:
            port: 8088
          initialDelaySeconds: 15
          periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 8088
          initialDelaySeconds: 100
          periodSeconds: 600
      terminationGracePeriodSeconds: 10
