wise-k8s-dir/wise-dir-v1-221201/wise-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wiseolap
  namespace: hyperdata
  #namespace: wise
  labels:
    app: wise
spec:
  containers:
  - name: wiseolapcon
    image: 172.24.9.40:5000/wiseolap:6.9.2
    command: 
    - "/bin/bash"
    args: ["/root/command1/command1.sh"]
    ports:
    - containerPort: 8088
      name: listener
      protocol: TCP
    - containerPort: 9736
      name: admin
      protocol: TCP
    - containerPort: 22
      name: sshn
      protocol: TCP
    #volumeMounts:
    #- name: host-path
    #  mountPath: /root/test-tmp
    resources:
      requests:
        cpu: 16
        memory: 100Gi
      limits:
        cpu: 16
        memory: 100Gi
    readinessProbe:
      tcpSocket:
        port: 8088
      initialDelaySeconds: 15
      periodSeconds: 20
    livenessProbe:
      tcpSocket:
        port: 8088
      initialDelaySeconds: 100
      periodSeconds: 600
  #volumes:
  #- name : host-path
  #  hostPath:
  #    path: /tmp
  #    type: DirectoryOrCreate
  terminationGracePeriodSeconds: 0
