wise-k8s-dir/wise-dir-v1-221201/wise-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wise-ingress
  namespace: hyperdata
  #namespace: wise
  annotations:
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/default-backend: wiseolap-svc
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/app-root: /
    #nginx.ingress.kubernetes.io/rewrite-target: /editds/$1$2
    nginx.ingress.kubernetes.io/rewrite-target: /editds/$1
    #nginx.ingress.kubernetes.io/rewrite-target: /editds/$2
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/rewrite-target: $1
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    #nginx.ingress.kubernetes.io/session-cookie-name: authorization
    nginx.ingress.kubernetes.io/session-cookie-name: JSESSIONID
    nginx.ingress.kubernetes.io/session-cookie-path: /editds
spec:
  #ingressClassName: wise-nginx
  ingressClassName: hyperdata-nginx
  rules:
  - http:
      paths:
      - path: /editds/(.*) # 둘다 됨.
      #- path: /editds(/|$)(.*) # 둘다  됨.
      #- path: /
        pathType: Prefix
        #pathType: ImplementationSpecific
        backend:
          service:
            name: wiseolap-svc
            port:
              number: 8888
  #- http:
  #    paths:
  #    - path: /()(.*)
  #      pathType: Prefix
  #      #pathType: ImplementationSpecific
  #      backend:
  #        service:
  #          name: wiseolap-svc
  #          port:
  #            number: 8888
  #tls:
  #- secretName: wisetest.wise-https-secret
